# sandbox-crewai

./: .gitignore  AGENTS.md  README.md  environment.yml  main.py  pyproject.toml
latest_ai_development/: crew.py  report.md
