[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sandbox-crewai"
version = "0.1.0"
description = "**🤖 A sandbox for experimenting with CrewAI multi-agent AI systems that research topics and generate comprehensive reports 🔬**"
requires-python = ">=3.10"
dependencies = []

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
